compiler/src/test/resources/amyc/typer/failing/LogicalError2.amy
object LogicalError
  () && true
end LogicalError
